--- a/app/views/cuestionario/index.html.erb
+++ b/app/views/cuestionario/index.html.erb
@@ -6,23 +6,15 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-					<button class="boton">siguiente</button>
+  				<span class="glyphicon glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-			<button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon glyphicon-chevron-down" aria-hidden="true"></span> Star
-</button>	
-			
+  				<span class="glyphicon glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
 			</div>
 		</div>
 	</div>
-	<div class="alert alert-danger" role="alert">
-  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-  <span class="sr-only">Error:</span>
-  Enter a valid email address
-</div>
 </body>
 
 <script>
